# agent-web

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  GPT Image 2.html  PRODUCT.md  README.md  config.example.toml  skills-lock.json
.claude/: agent-review-report.md  settings.local.json
.claude/skills/agent-builder/: SKILL.md
.claude/skills/review-agent/: SKILL.md
.impeccable/: design.json
admin/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/: App.vue  main.ts  style.css
admin/src/composables/: api.ts  useAiGenerate.ts
admin/src/views/: Dashboard.vue  ExploreList.vue  ImageProviders.vue  Login.vue  PromptLab.vue  Providers.vue  SessionDetail.vue  SessionExplore.vue  SessionTimeline.vue  Sessions.vue  Users.vue
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/docs/: explore-agent-design.md
client/prompts/: explore.md  generate.md
client/src/: App.vue  index.css  prompts.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  lib.rs  llm_stream.rs  main.rs  tools.rs
client/src-tauri/src/acp/: events.rs  mod.rs  provider.rs
client/src-tauri/src/acp/providers/: claude_code.rs  codex.rs  mod.rs
client/src/api/: admin.ts  changes.ts  checkpoints.ts  imageGen.ts  skills.ts  specs.ts
client/src/components/: ActionBtn.vue  AgentBlockAskUser.vue  AgentBlockError.vue  AgentBlockExploreRound.vue  AgentBlockPlannerDecision.vue  AgentBlockText.vue  AgentBlockThinking.vue  AgentBlockTool.vue  AgentBlockUser.vue  AgentHeader.vue  AgentInput.vue  AgentLayout.vue  AppSelect.vue  AppShell.vue  ArtifactReview.vue  ChangeChatPanel.vue  ChangeDetail.vue  Changes.vue  Chat.vue  ContextMenu.vue  ConversationOutline.vue  FolderPicker.vue  LocalAgentSettings.vue  Login.vue  MessageToast.vue  NewChangeDialog.vue  PageLoading.vue  RequirementReview.vue  SessionList.vue  SpecPanel.vue  Specs.vue  TaskEditor.vue
client/src/composables/: useAgentBlocks.ts  useAskUserInteraction.ts  useBlockEvents.ts  useBlockHistory.ts  useCanvasTree.ts  useChatActions.ts  useChatBlocks.ts  useChatSSE.ts  useContextMenu.ts  useLocalAgent.ts  useMessage.ts  useMessageTree.ts  useSession.ts  useSidebarPanels.ts
client/src/panels/: ChangeChatPanel.vue  DocPreviewPanel.vue
client/src/router/: index.ts
client/src/types/: chat.ts
client/src/views/: AdminDocs.vue  AdminImageProviders.vue  AdminTasks.vue  Agent.vue  ChangeDetail.vue  Changes.vue  Chat.vue  DebugStream.vue  ImageGen.vue  LocalAgentSettings.vue  Login.vue  SessionList.vue  Skills.vue  Specs.vue
crates/code-agent/: Cargo.toml
crates/code-agent/src/: lib.rs  prompt_pipe.rs  session.rs  types.rs
crates/code-agent/src/agent/: loop_detector.rs  mod.rs  orchestrator.rs  traits.rs  verifier.rs  worker.rs
crates/code-agent/src/context/: manager.rs  mod.rs
crates/code-agent/tests/: session_loop.rs
crates/code-tools/: Cargo.toml
crates/code-tools/src/: explore_tools.rs  file_checksum.rs  git.rs  lib.rs  list_directory.rs  permission.rs  read_file.rs  shell.rs  str_replace.rs  test_runner.rs  web_fetch.rs  write_file.rs
crates/hank-agent/: Cargo.toml
crates/hank-agent/src/: lib.rs  prompt_pipe.rs  retry.rs  session.rs  types.rs
crates/hank-agent/src/agent/: loop_detector.rs  mod.rs  orchestrator.rs  verifier.rs  worker.rs
crates/hank-agent/src/context/: manager.rs  mod.rs  summary.rs
crates/hank-db/: Cargo.toml
crates/hank-db/src/: lib.rs
crates/hank-provider/: Cargo.toml
crates/hank-provider/src/: anthropic.rs  lib.rs  openai.rs  types.rs
crates/hank-web-tools/: Cargo.toml
crates/hank-web-tools/src/: ask_user.rs  generate_tools.rs  lib.rs  read_file.rs  search.rs  shell.rs  spec_tools.rs  write_file.rs
docs/: book.toml  skill-design.md
docs/agent-cli-research/: README.md
docs/agent-cli-research/claude/: claude-SUMMARY.md  claude-base-systemprompt.txt  claude-exec-flow.jsonl  claude-systemprompt-attempt.json
docs/agent-cli-research/cli-agent-flows/: coding-agent-patterns.md  report.md
docs/agent-cli-research/codex/: codex-SUMMARY.md  codex-base-instructions.txt  codex-debug-prompt-input.json  codex-exec-flow.jsonl  codex-prompt-input.json
docs/book/: 404.html  index.html  overview.html  print.html  searchindex.js  toc.html  toc.js
docs/book/agent-fundamentals/: 01_我为什么要做这门课，以及我是谁.html  02_搞定 Agent 六大支柱：今天出个 Manus 明天出个 OpenClaw，你到底应该学什么？.html  03_从 ChatBot 到 Agent：一个 while 循环，凭什么让 AI 从_能聊天_变成_能干活_？.html  04_做 Agent 开发，有些大模型本身的底层机制，你不得不了解.html  05_2026 年了，你的 Agent 架构还停留在 LangChain 时代吗？.html  06_你的 Agent 为什么_卡_半天才吐字？流式响应的工程真相.html  07_模型 API 挂了怎么办？生产级容错不是加个 try-catch 这么简单.html  08_死循环、重复犯错、Token 烧穿：你的 Agent Loop 缺这三个_保险丝_.html  09_Function Calling 与 Structured Output：模型是怎么_学会_调用你写的函数的？.html  10_一次工具调用背后经历了什么？以 Claude Code 为例展开聊聊.html  11_工具太多模型选不准？Deferred Loading 和动态工具集.html  12_MCP 的工程真相：协议很好，但也有一些硬伤.html  13_Skills：Agent 时代的知识分发系统.html  14_你敢让 AI 直接跑 rm -rf 吗？生产级权限系统的四层防线.html  15_Context Engineering 全景：五个维度，一张地图.html  16_System Prompt 工程化与 Context Rot：从_写一段提示词_到_搭建一个行为控制系统_.html  (+6 more)
docs/feature/: code-agent-优化文档.md
docs/src/: SUMMARY.md  overview.md
server/: Cargo.toml
server/src/: admin.rs  auth.rs  changes.rs  chat.rs  checkpoints.rs  config.rs  image_gen.rs  llm.rs  main.rs  provider_registry.rs  requirement_docs.rs  response.rs  routes.rs  skills.rs  specs.rs  ws.rs
(+182 files in other folders)
