[workspace]
members = [
    "server",
    "crates/hank-provider",
    "crates/hank-agent",
    "crates/hank-web-tools",
    "crates/hank-db",
]
exclude = ["client/src-tauri"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
jsonwebtoken = "9"
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
bcrypt = "0.16"
