[package]
name = "hank-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hank-provider = { path = "../crates/hank-provider" }
hank-agent = { path = "../crates/hank-agent" }
hank-web-tools = { path = "../crates/hank-web-tools" }
hank-db = { path = "../crates/hank-db" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = "0.8"
dirs = "5"
