[package]
name = "hank-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hank-provider = { path = "../crates/hank-provider" }
code-agent = { path = "../crates/code-agent" }
code-tools = { path = "../crates/code-tools" }
hank-db = { path = "../crates/hank-db" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
toml = "0.8"
dirs = "5"
bcrypt = { workspace = true }
reqwest = { workspace = true }
