[package]
name = "code-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
hank-provider = { path = "../hank-provider" }
code-tools = { path = "../code-tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
